--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,25 +17,17 @@
 
 
     <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Forecast</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Weather News</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      <ul class="nav nav-pills ">
+        <li class="nav-item"><a href="#" class="nav-link link-dark" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link link-dark">More</a></li>
+        <li class="nav-item"><a href="#" class="nav-link link-dark">Community</a></li>
       </ul>
     </header>
   
 
     <div class="main"> 
-      <div class="sen-temperature">
-        <h1 class="temperature">
-          32 °C
-        </h1>
-        <div class="message">
-          <p>Hello! it's sunny today. Protect yourself from the sun.</p>
-        </div>
-        
+      <div class="jokeText">
+        <p></p>
       </div>
     </div>
 
